nowy styl dla tekstu

--- a/Betotrans/Views/Home/Contact.cshtml
+++ b/Betotrans/Views/Home/Contact.cshtml
@@ -45,7 +45,7 @@
             <div class="tekst">
                 <h1 class="ng">Kontakt</h1>
                     <div >
-                        <p>
+                        <p class="articleText">
                             <strong style="font-size:15px">P.P.H.U. BETO-TRANS Józef Piejak </strong><br /><br />
                             96-332 Radziwiłłów <br /><br />
                             ul. Środkowa 38 <br /><br />
