--- a/Betotrans/Views/Shared/_Layout.cshtml
+++ b/Betotrans/Views/Shared/_Layout.cshtml
@@ -3,17 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>@ViewBag.Title - Beto-Trans</title>
-<meta name="Description" content="Firma BETO-TRANS specjalizuje się w wydobywaniu, uszlachetnianiu i transporcie kruszyw do celów budownictwa, drogownictwa oraz celów ogrodniczych. Zajmuje się także budową dróg, świadczy usługi koparką, ładowarką oraz HDS." />
-<meta name="keywords" content="Sprzedaż kruszyw do celów budownictwa, piasek płukany 0-2, żwir 2-8, żwir 8-16, żwir 2-16, mieszanka 0-16, pospółka, piasek kopalniany, podsyp, Sprzedaż kruszyw do celów drogownictwa, kruszywo kwarcytowe, kruszywo wapienne, kruszywo dolomitowe, Sprzedaż materiałów do celów ogrodniczych, żwir 16-32, otoczaki, głazy, ziemia, torf, Sprzedaż materiałów budowlanych: cement, Usługi transportowe samochodami samowyładowczymi, Usługi HDS, Wynajem koparki i ładowarki" />
+<meta name="Description" content="Firma BETO-TRANS specjalizuje się w wydobywaniu, uszlachetnianiu i transporcie kruszyw do celów budowlanych, drogowych oraz ogrodniczych. Zajmuje się także budową dróg, świadczy usługi koparką, ładowarką oraz HDS." />
+<meta name="keywords" content="Sprzedaż kruszyw do celów budowlanych, piasek płukany 0-2, żwir 2-8, żwir 8-16, żwir 2-16, mieszanka 0-16, pospółka, piasek kopalniany, podsyp, Sprzedaż kruszyw do celów drogowych, kruszywo kwarcytowe, kruszywo wapienne, kruszywo dolomitowe, Sprzedaż materiałów do celów ogrodniczych, żwir 16-32, otoczaki, głazy, ziemia, torf, Sprzedaż materiałów budowlanych: cement, Usługi transportowe samochodami samowyładowczymi, Usługi HDS, Wynajem koparki i ładowarki" />
 <meta name="Author" content="IT Consulting Kamil Wysocki" />
 <meta name="Robots" content="ALL" />
 <meta name="revisit-after" content="10" />
-<meta name="Classification" content="budownictwo" />
-<meta name="Abstract" content="Sprzedaż kruszyw" />
 
 @Styles.Render("~/Content/css")
 @Styles.Render("~/Content/jquery-ui")
-@Styles.Render("~/Content/fancybox/css")
+@Styles.Render("~/Content/fancyboxCss")
 
 @Scripts.Render("~/bundles/modernizr")
 
@@ -30,7 +28,7 @@
     <div class="menu">
             <ul>
                 <li><a href="@Url.Action("Index", "Home")">Strona główna</a></li>
-                <li><a href="#">O firmie</a></li>
+                <li><a href="@Url.Action("About", "Home")">O firmie</a></li>
                 <li><a href="#">Jak działamy</a></li>
                 <li><a href="@Url.Action("Offer", "Home")">Oferta</a></li>
                 <li><a href="@Url.Action("Contact", "Home")">Kontakt</a></li>
@@ -38,20 +36,24 @@
     </div>
 	<div class="s">
 		<div class="left">
-			<div>
-                <img src="@Url.Content("~/Images/obr1.png")" alt=""  style="margin-top:30px;"/>
-			</div>
-            <div data-bind="attr:{'data-src' : '@Url.Content("~/Images/maszyny/wiertnica2.JPG")', 'data-title' : 'wiercenia'}" class="modalPicture">
-                <img src="@Url.Content("~/Images/maszyny/mini/wiertnica2_191x109.JPG")" alt="" title="wiercenia" style="margin-top:30px;"/>
-            </div>
-			<div><img src="@Url.Content("~/Images/obr2.png")" alt="" style="margin-top:30px;"/></div>
-			<div><img src="@Url.Content("~/Images/obr3.png")" alt="" style="margin-top:30px;"/></div>
-            <div data-bind="attr:{'data-src' : '@Url.Content("~/Images/maszyny/urzadzenia_do_uszlachetniania_kopaliny.JPG")', 'data-title' : 'urządzenia do uszlachetniania kopaliny'}" class="modalPicture">
-                <img src="@Url.Content("~/Images/maszyny/mini/urzadzenia_do_uszlachetniania_kopaliny_191x108.JPG")" alt="" title="urządzenia do uszlachetniania kopaliny" style="margin-top:30px;"/>
-            </div>
-            <div data-bind="attr:{'data-src' : '@Url.Content("~/Images/maszyny/sortownik_kruszarki.JPG")', 'data-title' : 'sortownik i kruszarki'}" class="modalPicture">
-                <img src="@Url.Content("~/Images/maszyny/mini/sortownik_kruszarki_191x108.JPG")" alt="" title="sortownik i kruszarki" style="margin-top:30px;"/>
-            </div>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/mapa.jpg")" title="mapa">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/mapa_191x108.png")" alt="mapa" title="mapa" />
+            </a>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/maszyny/wiertnica2.JPG")" title="wiercenia">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/maszyny/mini/wiertnica2_191x109.JPG")" alt="wiercenia" title="wiercenia" />
+            </a>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/droga_do_kopalni.JPG")" title="droga do kopalni">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/droga_do_kopalni_191x108.png")" alt="droga do kopalni" title="droga do kopalni" />
+            </a>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/maszyny/Scania.JPG")" title="Scania">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/maszyny/mini/Scania_191x108.JPG")" alt="Scania" title="Scania" />
+            </a>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/maszyny/urzadzenia_do_uszlachetniania_kopaliny.JPG")" title="urządzenia do uszlachetniania kopaliny">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/maszyny/mini/urzadzenia_do_uszlachetniania_kopaliny_191x108.JPG")" alt="urządzenia do uszlachetniania kopaliny" title="urządzenia do uszlachetniania kopaliny" />
+            </a>
+            <a class="fancybox" rel="grupaLewyPanel" href="@Url.Content("~/Images/maszyny/sortownik_kruszarki.JPG")" title="sortownik i kruszarki">
+                <img style="margin-top:30px;" src="@Url.Content("~/Images/maszyny/mini/sortownik_kruszarki_191x108.JPG")" alt="sortownik i kruszarki" title="sortownik i kruszarki" />
+            </a>
 		</div>
 		<!--
 		<div class="left">
@@ -88,7 +90,7 @@
     <map name="top" id="top">
         <area shape="rect" coords="49,52,314,122" href="@Url.Action("Index", "Home")" alt="" />
         <area shape="rect" coords="623,67,752,104" href="@Url.Action("Offer", "Home")" alt="" />
-        <area shape="rect" coords="760,70,835,104" href="#mapa" alt="" />
+        <area shape="rect" coords="760,70,835,104" href="@Url.Action("About", "Home")" alt="" />
         <area shape="rect" coords="850,71,940,104" href="@Url.Action("Contact", "Home")" alt="" />
     </map>
     
