--- a/Betotrans/Views/Home/Offer.cshtml
+++ b/Betotrans/Views/Home/Offer.cshtml
@@ -5,7 +5,7 @@
 @section Body {
 <div class="right">
 			<div class="tekst">
-            	<h1 class="ng">Sprzedaż kruszyw do celów budownictwa</h1>
+            	<h1 class="ng">Sprzedaż kruszyw do celów budowlanych</h1>
                  <table id="tabelaOferta" class="tabelka" style="width:95%;">
                      <tbody data-bind="foreach: ofertaBudowlanaWierszeKolumny">
                          <tr>
@@ -18,7 +18,7 @@
                      </tbody>
 				</table>
 				
-				<h1 class="ng">Sprzedaż kruszyw do celów drogownictwa</h1>
+				<h1 class="ng">Sprzedaż kruszyw do celów drogowych</h1>
 				
 				<h1 class="ng">Sprzedaż materiałów do celów ogrodniczych</h1>
 
