--- a/Betotrans/Views/Shared/_Layout.cshtml
+++ b/Betotrans/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <meta name="Author" content="IT Consulting Kamil Wysocki" />
 <meta name="Robots" content="ALL" />
 <meta name="revisit-after" content="10" />
+<meta name="google-site-verification" content="IPjdDZ05mkBqQpriaTZ5vgR9-HQQYyiC6WxpXHEs50I" />
 
 @Styles.Render("~/Content/css")
 @Styles.Render("~/Content/jquery-ui")
@@ -242,6 +243,17 @@
             }
         });
     });
+</script>
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-37771856-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function () {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 </script>
 </body>
 </html>
