--- a/Betotrans/Views/Shared/_Layout.cshtml
+++ b/Betotrans/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <div class="menu">
             <ul>
                 <li><a href="@Url.Action("About", "Home")">O firmie</a></li>
-                <li><a href="#">Jak działamy</a></li>
+                <!-- <li><a href="#">Jak działamy</a></li> -->
                 <li><a href="@Url.Action("Offer", "Home")">Oferta</a></li>
                 <li><a href="@Url.Action("Reference", "Home")">Zaufali nam</a></li>
                 <li><a href="@Url.Action("Contact", "Home")">Kontakt</a></li>
